--- a/src/components/navbar/Searchbar/Searchbar.css
+++ b/src/components/navbar/Searchbar/Searchbar.css
@@ -55,11 +55,9 @@
     align-items: stretch;
     width: 100%;
     height: 5vh;
-    /* margin-right: 0vw; */
   }
 
   .search-textfield {
-    width: 100%;
     flex: 1;
   }
 }
